cmake_minimum_required(VERSION 3.0)

project(stb)

if (STB_ALL)
    set(STB_IMAGE 1)
endif (STB_ALL)

if (BOTH)
    set(BUILD_DEBUG 1)
    set(BUILD_RELEASE 1)
else()
    if (DEBUG)
        set(BUILD_DEBUG 1)
    elseif (RELEASE)
        set(BUILD_RELEASE 1)
    endif ()
endif (BOTH)

if (STB_IMAGE)
    set(STB_IMAGE_LIB stb_image)
    set(CPACK_GENERATOR "ZIP")
    install(FILES stb_image.h DESTINATION include/stb)
    install(FILES stb_image_write.h DESTINATION include/stb)

    add_definitions(-DSTB_IMAGE=1)
    if (BUILD_DEBUG)
        add_library("${STB_IMAGE_LIB}d" stb_image.cpp)
        install(TARGETS "${STB_IMAGE_LIB}d" DESTINATION lib)
    endif (BUILD_DEBUG)
    if (BUILD_RELEASE)
        add_library("${STB_IMAGE_LIB}" stb_image.cpp)
        install(TARGETS "${STB_IMAGE_LIB}" DESTINATION lib)
    endif (BUILD_RELEASE)
endif(STB_IMAGE)

include(CPack)
